--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOETXCjIrRmMKziUpq8G7oL",
+      "authorship_tag": "ABX9TyPVBK5CXtsmNd0GN1XgNlvc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,7 @@
         "id": "kCFhNlAEIjG5",
         "outputId": "0f2e0588-5516-472c-ae35-698de827fc57"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,13 +131,65 @@
     {
       "cell_type": "code",
       "source": [
+        "# Assignment 3\n",
+        "\n",
+        "#design a simple numerical calculator in Python. The user needs to provide three inputs: two numbers and the mathematical operator of their choice. The program should print the output on the screen\n",
+        "\n",
+        "#step 1: get the numbers and inputs from the user\n",
+        "num1 = float(input(\"Enter first number: \"))\n",
+        "num2 = float(input(\"Enter second number: \"))\n",
+        "operator = input(\"Enter operator (+,-,*,/,//,**,%): \")\n",
+        "\n",
+        "#Step 2: check which operator they put in and so the calulation for them, also check if they input something wrong it ssays invalid\n",
+        "# You should have 7 operators\n",
+        "if operator == '+':\n",
+        "    result = num1 + num2\n",
+        "elif operator == '-':\n",
+        "    result = num1 - num2\n",
+        "elif operator == '*':\n",
+        "    result = num1 * num2\n",
+        "elif operator == '/':\n",
+        "    result = num1 / num2\n",
+        "elif operator == '**':\n",
+        "    result = num1 ** num2\n",
+        "elif operator == '%':\n",
+        "    result = num1 % num2\n",
+        "elif operator == '//':\n",
+        "    result = num1 // num2\n",
+        "else:\n",
+        "    print(\"Invalid operator\")\n",
+        "    result = None\n",
+        "\n",
+        "#Step 3: Print the results\n",
+        "print(\"First Number: \" , num1)\n",
+        "print(\"Second Number: \" , num2)\n",
+        "print(\"Operator: \" , operator)\n",
+        "print(\"Result: \" , result)\n",
         "\n"
       ],
       "metadata": {
-        "id": "CboDiMWNJhhk"
+        "id": "CboDiMWNJhhk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "56e7c0f6-62e4-42a5-dfb9-e4cd66aeabe7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 5\n",
+            "Enter second number: 5\n",
+            "Enter operator (+,-,*,/,//,**,%): *\n",
+            "First Number:  5.0\n",
+            "Second Number:  5.0\n",
+            "Operator:  *\n",
+            "Result:  25.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
