--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVBK5CXtsmNd0GN1XgNlvc",
+      "authorship_tag": "ABX9TyPs/2LukMvNRFTjdew5zJrV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -174,7 +174,7 @@
         },
         "outputId": "56e7c0f6-62e4-42a5-dfb9-e4cd66aeabe7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,6 +187,83 @@
             "Second Number:  5.0\n",
             "Operator:  *\n",
             "Result:  25.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 4\n",
+        "#A parking garage charges $5 plus $2.50 for each hour parked\n",
+        "#write a program that prints the number of hours parked and the corresponding fee side-by-by, from 1 to 8 hours\n",
+        "# bonus: the minimum ffee is $10 and the maxium fee is $20\n",
+        "\n",
+        "for hours in range(1, 9):\n",
+        "    fee = 5 + hours * 2.5\n",
+        "    if fee < 10:\n",
+        "        fee = 10\n",
+        "    elif fee > 20:\n",
+        "        fee = 20\n",
+        "    print(f\"{hours} {fee}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o3U0pwA4gXqm",
+        "outputId": "e6d0f058-9c9c-43ad-c6eb-7a5110750172"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20\n",
+            "8 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assignmenmt 5\n",
+        "# movie theater\n",
+        "\n",
+        "for ad in range(0,201,25):\n",
+        "  revenue = 10 * (20 + 2 * ad ** 0.5) - 200 - ad\n",
+        "  print(ad, round(revenue,0))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MgduE13qgEP6",
+        "outputId": "ce650590-4a93-4ab5-ed2b-1c608beb807e"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0.0\n",
+            "25 75.0\n",
+            "50 91.0\n",
+            "75 98.0\n",
+            "100 100.0\n",
+            "125 99.0\n",
+            "150 95.0\n",
+            "175 90.0\n",
+            "200 83.0\n"
           ]
         }
       ]
