--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPs/2LukMvNRFTjdew5zJrV",
+      "authorship_tag": "ABX9TyMA7xGzcyrVKYMD70lYT8iL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -249,7 +249,7 @@
         "id": "MgduE13qgEP6",
         "outputId": "ce650590-4a93-4ab5-ed2b-1c608beb807e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,6 +264,43 @@
             "150 95.0\n",
             "175 90.0\n",
             "200 83.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 6\n",
+        "# Starting with an empty list, desgin a program in python that populates the list by repeatledy asking the user ofr numerical unuts. The process stops when the user goves 0. Finally the list should be dsiplayed in desecending order\n",
+        "\n",
+        "list = []\n",
+        "user_input = float(input(\"Enter a number: \"))\n",
+        "while user_input != 0:\n",
+        "    list.append(user_input)\n",
+        "    user_input = float(input(\"Enter a number: \"))\n",
+        "list.sort(reverse=True)\n",
+        "print(list)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oqhgrv9Xutbf",
+        "outputId": "cdbf57b0-83e0-4555-bda8-7d036ca330a2"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 6\n",
+            "Enter a number: 5\n",
+            "Enter a number: 9\n",
+            "Enter a number: 10\n",
+            "Enter a number: 0\n",
+            "[10.0, 9.0, 6.0, 5.0]\n"
           ]
         }
       ]
