--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA7xGzcyrVKYMD70lYT8iL",
+      "authorship_tag": "ABX9TyNZVC4sIgFAtgHdZhfWEmAP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -289,7 +289,7 @@
         "id": "Oqhgrv9Xutbf",
         "outputId": "cdbf57b0-83e0-4555-bda8-7d036ca330a2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,6 +301,44 @@
             "Enter a number: 10\n",
             "Enter a number: 0\n",
             "[10.0, 9.0, 6.0, 5.0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 7\n",
+        "# rock paper scissors, but the user gets to say yes if they want to contonuw playing\n",
+        "\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "while True:\n",
+        "  play = input('Do you want to play a game (y/n)?:').lower()\n",
+        "  if play != 'yes':\n",
+        "    break\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0qsKLP13e0DR",
+        "outputId": "7ca75a0e-ef5b-48d3-c9f0-0b95d40ee9fd"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a choice (rock, paper, scissors): rock\n",
+            "Computer:  paper\n",
+            "User:  rock\n",
+            "Computer wins!\n"
           ]
         }
       ]
