--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZVC4sIgFAtgHdZhfWEmAP",
+      "authorship_tag": "ABX9TyNDadu+rN1gTCluAEdo7fOP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -316,8 +316,26 @@
         "\n",
         "while True:\n",
         "  play = input('Do you want to play a game (y/n)?:').lower()\n",
+        "\n",
         "  if play != 'yes':\n",
         "    break\n",
+        "\n",
+        "#rock, paper, scissors game here...\n",
+        "  user_choice = input(\"Choose between rock, paper, scissors: \")\n",
+        "  pc_choice = random.choice(['rock', 'paper', 'scissors'])\n",
+        "  print(f\"PC choice: {pc_choice}\")\n",
+        "\n",
+        "  if user_choice == pc_choice:\n",
+        "      print(\"Tie\")\n",
+        "  elif (\n",
+        "    (user_choice == 'rock' and pc_choice == 'scissors') or\n",
+        "    (user_choice == 'paper' and pc_choice == 'rock') or\n",
+        "    (user_choice == 'scissors' and pc_choice == 'paper')\n",
+        "  ):\n",
+        "   print(\"User win\")\n",
+        "  else:\n",
+        "    print(\"You lose\")\n",
+        "\n",
         "\n",
         "\n",
         "\n"
@@ -327,18 +345,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0qsKLP13e0DR",
-        "outputId": "7ca75a0e-ef5b-48d3-c9f0-0b95d40ee9fd"
+        "outputId": "95dd4108-9ebf-4bba-9383-08ff15cfd877"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Enter a choice (rock, paper, scissors): rock\n",
-            "Computer:  paper\n",
-            "User:  rock\n",
-            "Computer wins!\n"
+            "Do you want to play a game (y/n)?:yes\n",
+            "Choose between rock, paper, scissors: rock \n",
+            "PC choice: rock\n",
+            "You lose\n",
+            "Do you want to play a game (y/n)?:yes\n",
+            "Choose between rock, paper, scissors: paper\n",
+            "PC choice: scissors\n",
+            "You lose\n",
+            "Do you want to play a game (y/n)?:yes\n",
+            "Choose between rock, paper, scissors: rock\n",
+            "PC choice: scissors\n",
+            "User win\n",
+            "Do you want to play a game (y/n)?:yes\n",
+            "Choose between rock, paper, scissors: paper\n",
+            "PC choice: rock\n",
+            "User win\n",
+            "Do you want to play a game (y/n)?:np \n"
           ]
         }
       ]
