--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDadu+rN1gTCluAEdo7fOP",
+      "authorship_tag": "ABX9TyO2ZR3OIvDGW/yKcTHo1g3j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -347,7 +347,7 @@
         "id": "0qsKLP13e0DR",
         "outputId": "95dd4108-9ebf-4bba-9383-08ff15cfd877"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -370,6 +370,86 @@
             "PC choice: rock\n",
             "User win\n",
             "Do you want to play a game (y/n)?:np \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 8\n",
+        "# A company sells two prodcuts. their prices are : P-01 $9.95 and P-02 $10.50\n",
+        "# Write a program that sets up a dictionary witht he products IDs as kersy and prices as their values. Prompt the user to enter a prodcut IDm then display that products's price\n",
+        "\n",
+        "products = {\n",
+        "    'P-01': 9.95,\n",
+        "    'P-02': 10.50\n",
+        "}\n",
+        "\n",
+        "user_input = input(\"Enter a product ID: \")\n",
+        "if user_input in products.keys():\n",
+        "    print(f\"{user_input} {products[user_input]}\")\n",
+        "else:\n",
+        "    print(f\"{user_input} not found\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-n5h-u-awDu0",
+        "outputId": "fa83b84a-6692-4fef-c231-73fb36bcd6d9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a product ID: P-01\n",
+            "P-01 9.95\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 9\n",
+        "# parking garage, wrap the iterative process into a fucntion that takes as input parameter the number od parking hours and returns the fee\n",
+        "def calcFee (hours):\n",
+        "    fee = 5 + hours * 2.5\n",
+        "    if fee < 10:\n",
+        "        return 10.0\n",
+        "    elif fee > 20:\n",
+        "        return 20.0\n",
+        "    else:\n",
+        "      return fee\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  hours = int(input(\"Enter hours parked: \"))\n",
+        "  fee = calcFee(hours)\n",
+        "  print(fee)\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uj6DtRy-iDsb",
+        "outputId": "44e29aa9-56d8-494f-ffcf-59041966f6f8"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter hours parked: 3\n",
+            "12.5\n"
           ]
         }
       ]
