--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2ZR3OIvDGW/yKcTHo1g3j",
+      "authorship_tag": "ABX9TyPpyXXPni2qYpTUNqLl9awD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,7 +431,8 @@
         "  fee = calcFee(hours)\n",
         "  print(fee)\n",
         "\n",
-        "main()\n",
+        "if __name__ == \"__main__\":\n",
+        "  main()\n",
         "\n",
         "\n"
       ],
@@ -440,17 +441,443 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uj6DtRy-iDsb",
-        "outputId": "44e29aa9-56d8-494f-ffcf-59041966f6f8"
+        "outputId": "5a8c0256-a21d-4e2e-a5a3-349e861598ff"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter hours parked: 3\n",
-            "12.5\n"
+            "Enter hours parked: 4\n",
+            "15.0\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 10\n",
+        "# Recersive FUnction\n",
+        "\n",
+        "def reverse_string(user_input):\n",
+        "  if len(user_input) > 1:\n",
+        "    return user_input[-1] + reverse_string(user_input[:1])\n",
+        "  else:\n",
+        "    return user_input\n",
+        "\n",
+        "user_input = input(\"Enter a string: \")\n",
+        "print(reverse_string(user_input))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "si_ZwlYluAeL",
+        "outputId": "1751a68d-734c-4cf2-8c87-b333620d6c1a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: hello\n",
+            "oh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 11\n",
+        "# A quality control manager would like to find the average weight of a list of weights. Prior experience indicates that the first two measures are atypical, and the practice is to exclude these from the average calculation.\n",
+        "#Write a program that calculates the average of a list of numbers that given as inputs from the user, excluding the first two values.\n",
+        "#For your program, you must define and use the following functions:\n",
+        "#getValues(n): Prompt the user for n values, returns the list\n",
+        "#calcAverage(alist): Calculates the average from the list\n",
+        "\n",
+        "def getValues(n:int) -> list:\n",
+        "  '''\n",
+        "  Prompt the user for inputs, adds them to a list\n",
+        "\n",
+        "  Input:\n",
+        "  - Number of items in the list\n",
+        "\n",
+        "  Output:\n",
+        "  - A list\n",
+        "  '''\n",
+        "\n",
+        "  items = []\n",
+        "#n cannot be a flaor since range cannot take floats\n",
+        "\n",
+        "  for i in range(n):\n",
+        "    try:\n",
+        "     item = float(input(\"Enter a weight value: \"))\n",
+        "    except Exception as e:\n",
+        "      item= float('nan')\n",
+        "\n",
+        "    items.append(item)\n",
+        "\n",
+        "  return items\n",
+        "\n",
+        "\n",
+        "def calcAverage(alist:list) -> float:\n",
+        "  '''\n",
+        "  Input:\n",
+        "  - a list of weights\n",
+        "\n",
+        "  Output:\n",
+        "  - the average weight\n",
+        "  '''\n",
+        "  try:\n",
+        "   return sum(alist[2:]) / len(alist[2:])\n",
+        "  except Exception as e :\n",
+        "    print(e)\n",
+        "    return float('nan')\n",
+        "\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "  n = int(input(\"How many weights?: \"))\n",
+        "  if n <0 :\n",
+        "    raise ValueError('Number of items must be postive!')\n",
+        "\n",
+        "\n",
+        "  L = getValues(n)\n",
+        "\n",
+        "  avg = calcAverage(L)\n",
+        "  print(f'Average weight : {avg}lbs.')\n",
+        "\n",
+        "\n",
+        "main()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_x68hqHaEsod",
+        "outputId": "16fa3a41-55d0-483e-e450-8022c5d02d6f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many weights?: 3\n",
+            "Enter a weight value: 4\n",
+            "Enter a weight value: 5\n",
+            "Enter a weight value: 2\n",
+            "Average weight : 2.0lbs.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assignment 12\n",
+        "\n",
+        "'''\n",
+        "Part A - Compute Simple ROI\n",
+        "Task: Implement a fucntion roi(cost, revenue) that returns (revenuue - cost)/ cost as float\n",
+        "\n",
+        "Requirements :\n",
+        "Use assertions for programmer-side contracts:\n",
+        "  cost and revenue are int or float\n",
+        "  cost != 0\n",
+        "'''\n",
+        "\n",
+        "def roi(cost: float, revenue: float) -> float:\n",
+        "\n",
+        "  assert cost > 0, \"Cost must be postive\"\n",
+        "  assert isinstance(cost, (int, float)), \"Cost must be numerical\"\n",
+        "  assert isinstance(revenue, (int, float)), \"Revenue must be numerical\"\n",
+        "\n",
+        "\n",
+        "  return (revenue - cost) / cost\n",
+        "\n",
+        "if __name__== \"__main__\":\n",
+        "  cost = float(input(\"Enter cost: \"))\n",
+        "  revenue = float(input(\"Enter revenue: \"))\n",
+        "  ret = roi(cost, revenue)\n",
+        "\n",
+        "  print(ret)\n",
+        "\n",
+        "'''\n",
+        "Part B - Monthly Loan Payment\n",
+        "Task : Add a fucntion loan_payment(principal, annual_rate, months) that returns the fixed monthly payment using the annuity formula:\n",
+        "monthly rate r = annual_rate/12\n",
+        "if r!= 0: pmt = r*P / (1- (1+r) ** (-n))\n",
+        "if r == 0 : pmt = P /n\n",
+        "\n",
+        "Requirements:\n",
+        "Assertions for programmer contracts:\n",
+        "principal, annual_rate, months are numercic\n",
+        "\n",
+        "raise valueError for user mistakes\n",
+        "  principal <=0\n",
+        "  months <=0\n",
+        "  annual_rate <=0\n",
+        "'''\n",
+        "\n",
+        "def loan_payment(principal: float, annual_rate: float, months: int) -> float:\n",
+        "\n",
+        "  assert isinstance(principal, (int, float)), \"Principal must be numerical\"\n",
+        "  assert isinstance(annual_rate, (int, float)), \"Annual rate must be numerical\"\n",
+        "  assert isinstance(months, int), \"Months must be numerical\"\n",
+        "\n",
+        "  if principal <= 0:\n",
+        "    raise ValueError(\"Principal must be > 0\")\n",
+        "\n",
+        "  if months <= 0:\n",
+        "    raise ValueError(\"Annual rate cannot be negative\")\n",
+        "\n",
+        "  if annual_rate <= 0:\n",
+        "    raise ValueError(\"Number of months must be > 0\")\n",
+        "\n",
+        "  r = annual_rate / 12.0\n",
+        "  n = months\n",
+        "  P = float(principal)\n",
+        "\n",
+        "\n",
+        "  if r == 0.0:\n",
+        "    return P/n\n",
+        "  else:\n",
+        "    return r * P / (1.0 - (1.0 + r) ** (-n))\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  try:\n",
+        "    P = float(input(\"Enter principal: \"))\n",
+        "    apr = float(input(\"Enter annual interest rate as a decimal\"))\n",
+        "    n = int(input(\"Enter number of months: \"))\n",
+        "\n",
+        "    payment = loan_payment(P, apr, n)\n",
+        "    print(f\"Monthly payment: {payment: .2f}\")\n",
+        "\n",
+        "  except Exception as e:\n",
+        "    print(e)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wb1gRY7rMt0T",
+        "outputId": "b915032c-efa9-4302-fcf5-321232eefafb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter cost: 100\n",
+            "Enter revenue: 300\n",
+            "2.0\n",
+            "Enter principal: 10000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Asssignment 13\n",
+        "'''\n",
+        "Write a Python class and populate it with two attributes and methods:\n",
+        "○ Attributes: first/last names\n",
+        "○ Method display(): takes a Boolean input parameter; displays the attribute values\n",
+        "either formally (last, first) or informally (first)\n",
+        "○ Special method __str__()\n",
+        "'''\n",
+        "class Greeting:\n",
+        "  def __init__(self,first,last):\n",
+        "    self.first = first\n",
+        "    self.last = last\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return \"Instance of class Greeting\"\n",
+        "\n",
+        "  def display(self, reverse=True):\n",
+        "    if reverse:\n",
+        "      print(f\"{self.last}, {self.first}\")\n",
+        "    else:\n",
+        "      print(self.first)\n",
+        "\n",
+        "\n",
+        "\n",
+        "name = Greeting ('John','Doe')\n",
+        "print(name)\n",
+        "name.display()\n",
+        "name.display(reverse=False)"
+      ],
+      "metadata": {
+        "id": "2DorJuisPKMm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "316af709-65ca-4350-bdd9-899d2b01f8cc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Instance of class Greeting\n",
+            "Doe, John\n",
+            "John\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Assignment 14\n",
+        "'''\n",
+        "create a class Student that has 3 atributes : name(str), number(int), courses(list).\n",
+        "two getter methids for name and courses\n",
+        "A setter method for name\n",
+        "the special methid __len__ that retunes the length of list courses\n",
+        "A method enroll() that appends a course to courses list if it is not there\n",
+        "'''\n",
+        "\n",
+        "class Student:\n",
+        "  def __init__(self,name,number):\n",
+        "    self.__name = name\n",
+        "    self.__number = number\n",
+        "    self.__courses = []\n",
+        "\n",
+        "  def get_name(self):\n",
+        "    return self.__name\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.__courses\n",
+        "\n",
+        "  def set_name(self,newname):\n",
+        "    self.__name = newname\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.__courses)\n",
+        "\n",
+        "  def enroll(self,course):\n",
+        "    if course in self.__courses:\n",
+        "      print(f\"{course} is already enrolled\")\n",
+        "    else:\n",
+        "      self.__courses.append(course)\n",
+        "\n",
+        "\n",
+        "\n",
+        "n = Student ('Bob',12345)\n",
+        "print(n.get_name())\n",
+        "print(n.get_courses())\n",
+        "n.set_name('Bob Ross')\n",
+        "n.enroll(\"ABC123\")\n",
+        "n.enroll(\"ABC123\")\n",
+        "print(n.get_courses())\n",
+        "len(n)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Pc3GG4rDRTD",
+        "outputId": "5aa55720-f168-4fbf-fe22-a7dced353f15"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bob\n",
+            "[]\n",
+            "ABC123 is already enrolled\n",
+            "['ABC123']\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "#Assignment 15\n",
+        "'''\n",
+        "Create a class Point that has:\n",
+        "   two coordinate attributes (x,y)\n",
+        "   a method distance() that calcualtes the distancebetween two instances of the class\n",
+        "Create a class Rectangle that has:\n",
+        "    six attributes : four point instances and two attributes for width/heght\n",
+        "                      the latter two are calcuatated based on pairs of the four Point instances\n",
+        "    three methids for calculating wifht, height , area of rectangle\n",
+        "'''\n",
+        "\n",
+        "class Point():\n",
+        "  def __init__(self,x,y):\n",
+        "    self.x = x\n",
+        "    self.y = y\n",
+        "\n",
+        "  def distance(self,other):\n",
+        "    return ((self.x - other.x) ** 2 + (self.y - other.y) ** 2) ** 0.5\n",
+        "\n",
+        "class Rectangle(Point):\n",
+        "  def __init__(self):\n",
+        "    self.p1 = Point(0,0)\n",
+        "    self.p2 = Point(1,0)\n",
+        "    self.p3 = Point(1,1)\n",
+        "    self.p4 = Point(0,1)\n",
+        "    self.width = self.p1.distance(self.p2)\n",
+        "    self.height = self.p3.distance(self.p4)\n",
+        "\n",
+        "  def area(self):\n",
+        "    return self.width * self.height\n",
+        "\n",
+        "square = Rectangle()\n",
+        "square.area()\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rtcokFBxIk5E",
+        "outputId": "c6a73e08-0de2-43f8-cd6e-3bd1de0fb12d"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     }
